...
                end = offset
            ).firstOrNull()?.let {
                onCreateAccountClick()
            }
        },
        modifier = Modifier.semantics {
            contentDescription = "Clickable text"
            testTag = "Clickable text test tag"
        }
    )
}
