package com.example.mintsocialcompose.type

enum class BlogFilter(val filter: String) {
    All("all"),
    Mine("mine"),
    Others("others")
}